fixed timeline spacing; added facebook logo; may need to resize logos for mobile browsers

--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@
 }
 
 .content-text {
+	font-size: 2vh;
   padding: 10px 15px;
   margin: 0;
   color: #fff;
@@ -412,7 +413,6 @@ Work Timeline
 }
 
 .active {
-	position: relative;
 	z-index: 100;
 }
 
@@ -448,25 +448,6 @@ Work Timeline
 		width: 95%;
 	}
 	
-	.logo img {
-		/*width: 10%;
-		height: auto;
-		left: 0;*/
-	}
-	
-	/*.facebook-exp .logo img {
-		transform: scale(1.3);
-	}
-
-	.amazon-exp .logo img {
-		transform: scale(1.3);
-		margin-top: 10px;
-	}
-
-	.jpl-exp .logo img {
-		transform: scale(1.7);
-	}*/
-
 	.work-position p {
 		font-size: 2vh;
 	}
@@ -502,7 +483,7 @@ Work Timeline
 	.date-item::before{
 		top: 2vw;
 		left: -1.5vw;
-		width: 2vw;
+		width: 1.5vw;
 		height: 1px;
 	}
 }
@@ -675,16 +656,6 @@ Work Timeline
 		width: 70%;
 	}
 
-	/*.logo img {
-		width: 20%;
-		margin: auto;
-		border-radius: 8px;
-	}
-
-	.facebook-exp .logo img {
-		transform: scale(1.5);
-	}*/
-
 	.work-position p {
 		font-size: 3vh;
 	}
@@ -845,7 +816,7 @@ Movie information
 }
 
 .info p {
-	font-size: 2vh;
+	/*font-size: 2vh;*/
 	padding: 1.2em 1.4em;
 	margin: 2px 0 0;
 	font-weight: 500;
@@ -853,6 +824,7 @@ Movie information
 	line-height: 1.4em;
 	text-shadow: 0px 1px 1px rgba(0,0,0,1);
 	white-space: normal;
+	word-break: break-word;
 }
 
 /*************************************
